--- a/index.html
+++ b/index.html
@@ -29,13 +29,18 @@
 
 
 
-    <div id="main">
+    <article>
       <a href="#/">
-        <h1><img src="www/images/genesis-logo.png">genesis.re</h1>
+        <header>
+          <img class="logo" src="www/images/genesis-logo-white.png">
+          <div style="float:left">
+            <h1>genesis.re</h1>
+            <h3>long-term sustainability and resilience</h3>
+          </div>
+        </header>
       </a>
-      <h3>long-term sustainability and resilience</h3>
       <div ng-view></div>
-    </div>
+    </article>
 
     <link rel="stylesheet" href="www/css/main.css">
     <link rel="stylesheet" href="www/css/normalize.css">
