--- a/cruitment/index.html
+++ b/cruitment/index.html
@@ -1,9 +1,16 @@
 <!DOCTYPE html>
 <html>
  <head>
-  <meta http-equiv="refresh" content="0; url=http://genesis.re/recruitment">
+  <title>Recruitment</title>
+  <style>
+   html, body { margin: 0;  padding: 0; overflow: hidden; }
+   iframe { width:100vw; height: 100vh;}
+  </style>
+  
  </head>
  <body>
+
+  <iframe frameBorder=0 src="https://docs.google.com/document/d/18jh4TfiwYl0PTeAG2NuR92mJJFpsGCKDZSU1vdZMQyU/pub?embedded=true"></iframe>
 
  </body>
 </html>
