--- a/recruitment/index.html
+++ b/recruitment/index.html
@@ -1,16 +1,9 @@
 <!DOCTYPE html>
 <html>
  <head>
-  <title>Recruitment</title>
-  <style>
-   html, body { margin: 0;  padding: 0; overflow: hidden; }
-   iframe { width:100vw; height: 100vh;}
-  </style>
-  
+  <meta http-equiv="refresh" content="0; url=http://genesis.re/recruitment">
  </head>
  <body>
-
-  <iframe src="https://docs.google.com/document/d/18jh4TfiwYl0PTeAG2NuR92mJJFpsGCKDZSU1vdZMQyU/pub?embedded=true"></iframe>
 
  </body>
 </html>
