--- a/recruitment/index.html
+++ b/recruitment/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
  <head>
-  <meta http-equiv="refresh" content="0; url=http://genesis.re/recruitment">
+  <meta http-equiv="refresh" content="0; url=http://genesis.re/cruitment">
  </head>
  <body>
 
