--- a/steroids/index.html
+++ b/steroids/index.html
@@ -10,6 +10,9 @@
   </head>
   <body>
 
+    <iframe src="https://docs.google.com/document/d/1WUsQ_Kaa_tJljadPpHO2AFwvOAIqrYFS_zehUd6iCVk/pub?embedded=true"></iframe>
+
+    <!--
     <iframe id="google-doc-iframe" srcdoc="" frameborder="0"></iframe>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
@@ -23,7 +26,8 @@
             }, 1000);
         });
     });
-    </script>  
+    </script>
+    -->
   
   </body>
 </html>
