--- a/cruitment/index.html
+++ b/cruitment/index.html
@@ -9,7 +9,10 @@
   
  </head>
  <body>
+ 
+    <iframe src="https://docs.google.com/document/d/18jh4TfiwYl0PTeAG2NuR92mJJFpsGCKDZSU1vdZMQyU/pub?embedded=true"></iframe>
 
+    <!--
     <iframe id="google-doc-iframe" srcdoc="" frameborder="0"></iframe>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
@@ -23,6 +26,8 @@
             }, 1000);
         });
     });
+    
+    -->
     </script>
     
  </body>
