--- a/steroids/index.html
+++ b/steroids/index.html
@@ -5,29 +5,27 @@
     <title>Startup Steroids</title>
     <style>
       body { margin: 0; padding: 0; }
-      iframe { height: 100vh; width: 100vw; }
+      iframe { margin-left: 2vw; margin-top: 2vh; height: 90vh; width: 90vw; }
     </style>
   </head>
   <body>
 
-    <iframe src="https://docs.google.com/document/d/1WUsQ_Kaa_tJljadPpHO2AFwvOAIqrYFS_zehUd6iCVk/pub?embedded=true"></iframe>
+    <iframe id="google-doc-iframe" srcdoc="" frameborder="0" scrolling="no"></iframe>
 
-    <!--
-    <iframe id="google-doc-iframe" srcdoc="" frameborder="0"></iframe>
-
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
     <script>
     $(function() {
         $.get("https://docs.google.com/document/d/1WUsQ_Kaa_tJljadPpHO2AFwvOAIqrYFS_zehUd6iCVk/pub?embedded=true", function(html) {
-            $("#google-doc-iframe").attr("srcdoc", html);
+            var contents = $("iframe").contents();
+
+            contents.find("html").html(html);
+
             setTimeout(function() {
-                $("#google-doc-iframe").contents().find('a[href^="http://"]').attr("target", "_blank");
-                $("#google-doc-iframe").contents().find('a[href^="https://"]').attr("target", "_blank");
+                contents.find('a[href^="http://"]').attr("target", "_blank");
+                contents.find('a[href^="https://"]').attr("target", "_blank");
             }, 1000);
         });
     });
     </script>
-    -->
   
   </body>
 </html>
