--- a/cruitment/index.html
+++ b/cruitment/index.html
@@ -4,31 +4,31 @@
   <title>Recruitment</title>
   <style>
    html, body { margin: 0;  padding: 0; overflow: hidden; }
-   iframe { width:100vw; height: 100vh;}
+   iframe { margin-left: 2vw; margin-top: 2vh; height: 90vh; width: 90vw; }
   </style>
   
  </head>
  <body>
- 
-    <iframe src="https://docs.google.com/document/d/18jh4TfiwYl0PTeAG2NuR92mJJFpsGCKDZSU1vdZMQyU/pub?embedded=true"></iframe>
-
-    <!--
-    <iframe id="google-doc-iframe" srcdoc="" frameborder="0"></iframe>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
+
+    <iframe id="google-doc-iframe" srcdoc="" frameborder="0" scrolling="no"></iframe>
+
     <script>
     $(function() {
         $.get("https://docs.google.com/document/d/18jh4TfiwYl0PTeAG2NuR92mJJFpsGCKDZSU1vdZMQyU/pub?embedded=true", function(html) {
-            $("#google-doc-iframe").attr("srcdoc", html);
+            var contents = $("iframe").contents();
+
+            contents.find("html").html(html);
+
             setTimeout(function() {
-                $("#google-doc-iframe").contents().find('a[href^="http://"]').attr("target", "_blank");
-                $("#google-doc-iframe").contents().find('a[href^="https://"]').attr("target", "_blank");
+                contents.find('a[href^="http://"]').attr("target", "_blank");
+                contents.find('a[href^="https://"]').attr("target", "_blank");
             }, 1000);
         });
     });
-    
-    -->
     </script>
-    
+
+
  </body>
 </html>
