--- a/steroids/index.html
+++ b/steroids/index.html
@@ -10,6 +10,8 @@
   </head>
   <body>
 
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
+
     <iframe id="google-doc-iframe" srcdoc="" frameborder="0" scrolling="no"></iframe>
 
     <script>
