--- a/steroids/index.html
+++ b/steroids/index.html
@@ -12,7 +12,7 @@
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
 
-    <iframe id="google-doc-iframe" srcdoc="" frameborder="0" scrolling="no"></iframe>
+    <iframe id="google-doc-iframe" srcdoc="" frameborder="0"></iframe>
 
     <script>
     $(function() {
