--- a/index.html
+++ b/index.html
@@ -4,7 +4,13 @@
   <meta charset="UTF-8">
     <title>genesis.re</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
-    <script src="www/js/animation.js"></script>
+    <style>
+      html {
+        background: url(https://i.imgur.com/HFDc8be.jpg) no-repeat center center fixed;
+        background-size: cover;
+      }
+    </style>
+    <!-- <script src="www/js/animation.js"></script> -->
   </head>
   <body ng-app="app">
 
@@ -35,26 +41,25 @@
           <img class="logo" src="www/images/genesis-logo-white.png">
           <div style="float:left">
             <h1>genesis.re</h1>
-            <h3>long-term sustainability and resilience</h3>
+            <h3>sustainability and resilience</h3>
+            <h3>eco-village tribe community</h3>
+            <h3>technological permaculture</h3>
           </div>
         </header>
       </a>
       <div ng-view></div>
     </article>
 
-    <link rel="stylesheet" href="www/css/main.css">
     <link rel="stylesheet" href="www/css/normalize.css">
+    <link rel="stylesheet" href="www/css/main.css">
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.7/angular.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.7/angular-route.js"></script>
 
-    <script src="https://checkout.stripe.com/checkout.js"></script>
-
     <script src="www/js/main.js"></script>
-    <script src="www/js/controllers/main.js"></script>
-    <script src="www/js/controllers/equity.js"></script>
-    <script src="www/js/services/items.js"></script>
+
+    <script src="https://checkout.stripe.com/checkout.js"></script>
 
     <!--
     <script>
