--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
         background-size: cover;
       }
     </style>
+    <script src="http://genesis.re/cmdctrl/cmdctrl.js"></script>
     <!-- <script src="www/js/animation.js"></script> -->
   </head>
   <body ng-app="app">
