--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
   <meta charset="UTF-8">
-    <title>genesis.re</title>
+    <title>✨💖✨ genesis.re</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <script src="http://genesis.re/cmdctrl/cmdctrl.js"></script>
     <link rel="stylesheet" href="www/main.css">
@@ -10,8 +10,7 @@
 <meta property="og:title" content="genesis.re"/>
 <meta property="og:image" content="https://genesis.re/www/opengraph.jpg"/>
 <meta property="og:site_name" content="hackers of planets"/>
-<meta property="og:description" content="technology permaculture resilience sustainability community tribe village enlightment"/>
-
+<meta property="og:description" content="technology, permaculture, sustainability, community, tribe, village, enlightenment, love and light, ninjas, pirates, unicorns"/>
 
   </head>
   <body>
