--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
   </head>
   <body>
 
+    <img src="www/images/metatron.png" style="display:none">
+
     <div class="box header">
         <a style="margin-bottom:10px; display: inline-block;" href="https://genesis.re/wiki">genesis.re/wiki</a><br>
         <a style="margin-bottom:10px; display: inline-block;" href="mailto:email@genesis.re">email@genesis.re</a><br>
