--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 
       // creation of the sphere material
       var sphereMaterial = new THREE.MeshBasicMaterial();
-      sphereMaterial.map = THREE.ImageUtils.loadTexture("http://i.imgur.com/rFpkaoX.jpg")
+      sphereMaterial.map = THREE.ImageUtils.loadTexture("http://i.imgur.com/89m76z9.jpg")
 
       // geometry + material = mesh (actual object)
       var sphereMesh = new THREE.Mesh(sphere, sphereMaterial);
