open graph tags

--- a/index.html
+++ b/index.html
@@ -8,14 +8,12 @@
     <link rel="stylesheet" href="www/main.css">
 
     <meta property="og:title" content="genesis.re"/>
-    <meta property="og:image" content="https://genesis.re/www/opengraph.jpg"/>
+    <meta property="og:image" content="https://genesis.re/www/images/metatron.png"/>
     <meta property="og:site_name" content="hackers of planets"/>
     <meta property="og:description" content="technology, permaculture, sustainability, community, tribe, village, enlightenment, love and light, ninjas, pirates, unicorns"/>
 
   </head>
   <body>
-
-    <img src="www/images/metatron.png" style="display:none">
 
     <div class="box header">
         <a style="margin-bottom:10px; display: inline-block;" href="https://genesis.re/wiki">genesis.re/wiki</a><br>
