Adding more stuff...

--- a/ksiazka/index.html
+++ b/ksiazka/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Identity by HTML5 UP</title>
+		<title>Praca informatyk programowanie UK Anglia Londyn</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<!--[if lte IE 8]><script src="assets/js/html5shiv.js"></script><![endif]-->
@@ -14,6 +14,14 @@
 		<!--[if lte IE 9]><link rel="stylesheet" href="assets/css/ie9.css" /><![endif]-->
 		<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+
+
+		<meta property="og:title" content="Praca informatyk programowanie UK Anglia Londyn"/>
+    <meta property="og:image" content="https://genesis.re/ksiazka/images/freedom.jpg"/>
+    <meta property="og:site_name" content="Michał Stefanów - genesis.re - pozdrawiam i dziękuje"/>
+    <meta property="og:description" content="Ostatnie 10 lat spędziłem za komputerem. Skorzystaj z proszę mojego doświadczenia... Darmowa książka do pobrania 🌎🌍🌏"/>
+
+
 	</head>
 	<body class="is-loading">
 
@@ -24,8 +32,13 @@
 					<section id="main">
 						<header>
 							<span class="avatar"><img src="images/avatar.jpg" alt="" /></span>
-							<h1>Jane Doe</h1>
-							<p>Senior Psychonautics Engineer</p>
+							<h1>Praca informatyk programowanie UK Anglia Londyn</h1>
+							<p>
+								Ostatnie 10 lat spędziłem za komputerem.<br>
+								Skorzystaj z proszę mojego doświadczenia...<br>
+							</p>
+							<script async="async" id="button_65266bcd-381c-483e-bdf4-54a34f529c63" src="//www.paywithatweet.com/embeds/65266bcd-381c-483e-bdf4-54a34f529c63" charset="utf-8"></script>
+							<p>Generalnie za FREE, proszę jedynie abyś podał dalej 🌎🌍🌏</p>
 						</header>
 						<!--
 						<hr />
@@ -66,17 +79,17 @@
 						-->
 						<footer>
 							<ul class="icons">
-								<li><a href="#" class="fa-twitter">Twitter</a></li>
-								<li><a href="#" class="fa-instagram">Instagram</a></li>
-								<li><a href="#" class="fa-facebook">Facebook</a></li>
+								<li><a href="https://twitter.com/stefek99" class="fa-twitter">Twitter</a></li>
+								<li><a href="https://instagram.com/stefek99" class="fa-instagram">Instagram</a></li>
+								<li><a href="https://facebook.com/mstefanow" class="fa-facebook">Facebook</a></li>
 							</ul>
 						</footer>
 					</section>
 
 				<!-- Footer -->
 					<footer id="footer">
-						<ul class="copyright">
-							<li>&copy; Jane Doe</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+						<ul class="copyright" style="font-size:0.8em">
+							<li>genesis.re/ksiazka</li><li>ksiazka@genesis.re</li>
 						</ul>
 					</footer>
 
