--- a/ksiazka/index.html
+++ b/ksiazka/index.html
@@ -35,7 +35,7 @@
 							<h1>Praca informatyk programowanie UK Anglia Londyn</h1>
 							<p>
 								Ostatnie 10 lat spędziłem za komputerem.<br>
-								Skorzystaj z proszę mojego doświadczenia...<br>
+								Skorzystaj proszę z mojego doświadczenia...<br>
 							</p>
 							<script async="async" id="button_65266bcd-381c-483e-bdf4-54a34f529c63" src="//www.paywithatweet.com/embeds/65266bcd-381c-483e-bdf4-54a34f529c63" charset="utf-8"></script>
 							<p>Generalnie za FREE, proszę jedynie abyś podał dalej 🌎🌍🌏</p>
