--- a/ksiazka/index.html
+++ b/ksiazka/index.html
@@ -38,7 +38,10 @@
 								Skorzystaj proszę z mojego doświadczenia...<br>
 							</p>
 							<script async="async" id="button_65266bcd-381c-483e-bdf4-54a34f529c63" src="//www.paywithatweet.com/embeds/65266bcd-381c-483e-bdf4-54a34f529c63" charset="utf-8"></script>
-							<p>Generalnie za FREE, proszę jedynie abyś podał dalej 🌎🌍🌏</p>
+							<p>
+								Generalnie za FREE, proszę jedynie abyś podał dalej 🌎🌍🌏<br>
+								Tutaj z kolei <a href="https://bit.ly/ksiazka-genesis" style="text-decoration: underline;">bezpośredni link</a>. <i>(PDF, 74 strony, 4.9MB)</i><br>
+							</p>
 						</header>
 						<!--
 						<hr />
