--- a/wiki/index.html
+++ b/wiki/index.html
@@ -2,7 +2,13 @@
 <html>
  <head>
   <meta charset="UTF-8">
-  <title>genesis.re - wiki redirect</title>
+  <title>genesis.re</title>
+
+    <meta property="og:title" content="genesis.re"/>
+    <meta property="og:image" content="http://tatefuture.com/images/manifesting-meg-benedicte.jpg"/>
+    <meta property="og:site_name" content="genesis.re - wiki page"/>
+    <meta property="og:description" content="Manifesting Infinite Abundance & Prosperity"/>
+
  </head>
  <body>
   <noscript>
