--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <html>
   <head>
   <meta charset="UTF-8">
-    <title>✨💖✨ genesis.re</title>
+    <title>genesis.re 🦄</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <script src="https://genesis.re/cmdctrl/cmdctrl.js"></script>
     <link rel="stylesheet" href="www/main.css">
 
-    <meta property="og:title" content="genesis.re"/>
+    <meta property="og:title" content="genesis.re 🦄"/>
     <meta property="og:image" content="https://genesis.re/www/images/metatron.png"/>
     <meta property="og:site_name" content="hackers of planets"/>
     <meta property="og:description" content="technology, permaculture, sustainability, community, tribe, village, enlightenment, love and light, ninjas, pirates, unicorns"/>
@@ -18,7 +18,9 @@
     <div class="box header">
         <a style="margin-bottom:10px; display: inline-block;" href="https://genesis.re/wiki">genesis.re/wiki</a><br>
         <a style="margin-bottom:10px; display: inline-block;" href="mailto:email@genesis.re">email@genesis.re</a><br>
-        architecting the new planet
+        <span style="margin-bottom:10px; display: inline-block;">architecting the new planet</span><br>
+        supporting <a href="https://astralship.org">astralship.org</a>
+
     </div>
 
     <div class="box credits">
