--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="lib/lightbox.min.css">
 
-    <meta property="og:title" content="genesis.re 🦄"/>
-    <meta property="og:image" content="https://genesis.re/www/images/metatron.png"/>
-    <meta property="og:site_name" content="hackers of planets"/>
-    <meta property="og:description" content="technology, permaculture, sustainability, community, tribe, village, enlightenment, love and light, ninjas, pirates, unicorns"/>
+    <meta property="og:title" content="ICO genesis.re 🦄"/>
+    <meta property="og:image" content="https://astralship.org/images/facebook-share-thumbnail.jpg"/>
+    <meta property="og:site_name" content="ICO investing in real-estate (buying large buildings at bargain prices)"/>
+    <meta property="og:description" content="We are visionary entrepreneurs who are seizing the opportunity and getting stuff done..."/>
   </head>
   <body>
 
