--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
 
 <h3>We are raising 30BTC to get us ready for ICO</h3>
 
+<h3>Currently the website + video + whitepaper = work in progress</h3>
+
 <iframe width="560" height="315" src="https://www.youtube.com/embed/ugknikDkDv0" frameborder="0" allowfullscreen></iframe>
 
 <h3><a href="https://docs.google.com/document/d/1UL1e21W6xNhXazVWn6gZHNO310MJa5c-ZXOTzLJPOU0/edit#heading=h.ol97kmdmne3u">Whitepaper</a></h3>
@@ -36,13 +38,12 @@
 
 
 
-<h3>Founding team:</h3>
-
-<p>Working with a number of people in official and unofficial capacity, we cannot just plaster <a href="https://twitter.com/VitalikButerin/status/874523258565132292">Vitalik Buterin</a> face.</p>
+<h2>Founding team:</h2>
 
 <div class="person">
-  <img class="avatar" src="images/michal.jpg">
+  <img class="avatar" src="images/avatars/michal.jpg">
   <div class="name">Michal Stefanow</div>
+  <div class="jobtitle">Chief Manifestor</div>
   <div class="social">
     <a href="https://www.linkedin.com/in/stefek99/"><img src="images/linkedin.png"></a>
     <a href="https://www.twitter.com/stefek99/"><img src="images/twitter.png"></a>
@@ -52,6 +53,7 @@
 <div class="person">
   <img class="avatar" src="images/liam.jpg">
   <div class="name">Liam Kurmos</div>
+  <div class="jobtitle">Captain of astralship.org</div>
   <div class="social">
     <a href="https://www.linkedin.com/in/liamkurmos/"><img src="images/linkedin.png"></a>
     <a href="https://www.twitter.com/stefek99/"><img src="images/twitter.png"></a>
@@ -60,21 +62,51 @@
 
 <div class="cf"></div>
 
+
+<h2>Advisors:</h2>
+
+<div class="person">
+  <img class="avatar" src="images/avatars/donovan.jpg">
+  <div class="name">Donovan Obosi</div>
+  <div class="jobtitle">ICO Crowd</div>
+  <div class="social">
+    <a href="https://www.linkedin.com/in/donovan-obosi-0b4999105/"><img src="images/linkedin.png"></a>
+  </div>
+</div>
+
+<div class="person">
+  <img class="avatar" src="images/avatars/rich.jpg">
+  <div class="name">Richard Burton</div>
+  <div class="jobtitle">Flow State</div>
+  <div class="social">
+    <a href="https://www.linkedin.com/in/richardjburton/"><img src="images/linkedin.png"></a>
+    <a href="https://twitter.com/ricburton"><img src="images/twitter.png"></a>
+  </div>
+</div>
+
+<div class="cf"></div>
+
+<h2>Ideal Dream Team</h2>
+<p>Working with a number of people in official and unofficial capacity, we cannot just plaster <a href="https://twitter.com/VitalikButerin/status/874523258565132292">Vitalik Buterin</a> face.</p>
+<ul>
+<li>Tim Ferriss</li>
+<li>Dave Aspret</li>
+</ul>
+
+<div class="cf"></div>
+
 <h1>pre-pre-ICO</h1>
 <p>Soon we will deploy proper ICO contract, for now 
 <p>
   <div class="coin-container"><img class="coin" src="images/bitcoin-logo.png"></div>
-  BTC: <input disabled value="17zVA88xk4Ma7Cza4NXGYcP4Z1Qz7TUdzV" style="color: black; padding: 5px; width: 560px;">
+  BTC: <input value="17zVA88xk4Ma7Cza4NXGYcP4Z1Qz7TUdzV" style="color: black; padding: 5px; width: 560px;">
 </p>
 <p>
   <div class="coin-container"><img class="coin" src="images/ethereum-logo.png"></div>
-  ETH: <input disabled value="0x85A363699C6864248a6FfCA66e4a1A5cCf9f5567" style="color: black; padding: 5px; width: 560px;">
+  ETH: <input value="0x85A363699C6864248a6FfCA66e4a1A5cCf9f5567" style="color: black; padding: 5px; width: 560px;">
 </p>
 
 <div class="cf"></div>
-
-<p style="margin-bottom: 80px;">Shouldn't trust random people, here is Michal's grandfather on Polish wikipedia: <a href="https://pl.wikipedia.org/wiki/Mieczys%C5%82aw_Stefan%C3%B3w">Mieczysław Stefanów</a></p>
-
 
 <footer>
       <p>
