omg it’s so embarassing, but...

--- a/index.html
+++ b/index.html
@@ -24,11 +24,14 @@
 
 <iframe width="560" height="315" src="https://www.youtube.com/embed/ugknikDkDv0" frameborder="0" allowfullscreen></iframe>
 
-<h3><a href="https://docs.google.com/document/d/1UL1e21W6xNhXazVWn6gZHNO310MJa5c-ZXOTzLJPOU0/edit#heading=h.ol97kmdmne3u">Whitepaper</a></h3>
-<h3><a href="https://astralship.org">astralship.org</a></h3>
-<h3><a href="https://www.youtube.com/watch?v=-p0NG9OLlX0">Engedi 2.0 on Youtube</a></h3>
+<ul>
+<li><a href="https://docs.google.com/document/d/1UL1e21W6xNhXazVWn6gZHNO310MJa5c-ZXOTzLJPOU0/edit#heading=h.ol97kmdmne3u">Whitepaper</a></li>
+<li><a href="https://astralship.org">astralship.org</a></li>
+<li><a href="https://www.youtube.com/watch?v=-p0NG9OLlX0">Engedi 2.0 on Youtube</a></li>
+<li>See more churches to buy:</li>
+</ul>
 
-<h3>See more churches to buy</h3>
+
 
 <img class="jslghtbx-thmb" src="images/church-bangor-thu.jpg"    data-jslghtbx="images/church-bangor-res.jpg"    data-jslghtbx-caption="<a href='https://www.dafyddhardy.co.uk/property/100278009590?pg=1&s-search=1&s-ttype=0&s-term=Bangor&s-radius=1&s-type=&s-bedmin=&s-bedmax=&s-pricemin=&s-pricemax=&s-lat=53.22739&s-lng=-4.129263000000037'>SOLD, subject to contract</a>">
 <img class="jslghtbx-thmb" src="images/church-engedi-thu.jpg"    data-jslghtbx="images/church-engedi-res.jpg"    data-jslghtbx-caption="<a href='http://www.dailypost.co.uk/news/north-wales-news/historic-caernarfon-chapel-sells-auction-6953093'>we own Engedi, hurray!</a>">
@@ -90,7 +93,10 @@
 <p>Working with a number of people in official and unofficial capacity, we cannot just plaster <a href="https://twitter.com/VitalikButerin/status/874523258565132292">Vitalik Buterin</a> face.</p>
 <ul>
 <li>Tim Ferriss</li>
-<li>Dave Aspret</li>
+<li>Dave Asprey</li>
+<li>Ben Greenfield</li>
+<li>Flow Genome</li>
+<li>London Real</li>
 </ul>
 
 <div class="cf"></div>
@@ -106,6 +112,7 @@
   ETH: <input value="0x85A363699C6864248a6FfCA66e4a1A5cCf9f5567" style="color: black; padding: 5px; width: 560px;">
 </p>
 
+<p>&nbsp;</p>
 <div class="cf"></div>
 
 <footer>
