--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 </div>
 
 <div class="person">
-  <img class="avatar" src="images/liam.jpg">
+  <img class="avatar" src="images/avatars/liam.jpg">
   <div class="name">Liam Kurmos</div>
   <div class="jobtitle">Captain of astralship.org</div>
   <div class="social">
@@ -95,14 +95,15 @@
 <li>Tim Ferriss</li>
 <li>Dave Asprey</li>
 <li>Ben Greenfield</li>
-<li>Flow Genome</li>
+<li>Flow Genome Project</li>
 <li>London Real</li>
 </ul>
 
 <div class="cf"></div>
 
 <h1>pre-pre-ICO</h1>
-<p>Soon we will deploy proper ICO contract, for now 
+<p>Please make yuorself known, it is pre-pre-ICO phase.</p>
+
 <p>
   <div class="coin-container"><img class="coin" src="images/bitcoin-logo.png"></div>
   BTC: <input value="17zVA88xk4Ma7Cza4NXGYcP4Z1Qz7TUdzV" style="color: black; padding: 5px; width: 560px;">
@@ -111,6 +112,13 @@
   <div class="coin-container"><img class="coin" src="images/ethereum-logo.png"></div>
   ETH: <input value="0x85A363699C6864248a6FfCA66e4a1A5cCf9f5567" style="color: black; padding: 5px; width: 560px;">
 </p>
+
+<h3>Smart contract reasearch:</h3>
+<ul>
+  <li><a href="https://moneo.io/job/370-smart-contract-for-pre-ico-and-ico-development-audit-deployment-management">https://moneo.io/job/370-smart-contract-for-pre-ico-and-ico-development-audit-deployment-management</a></li>
+  <li><a href="https://ethereum.stackexchange.com/questions/21548/where-to-find-ico-contract-with-linear-logarithmic-decrease">https://ethereum.stackexchange.com/questions/21548/where-to-find-ico-contract-with-linear-logarithmic-decrease</a></li>
+  <li><a href="https://ethereum.stackexchange.com/questions/23158/is-it-possible-to-create-ico-crowdsale-seamlessly-accepting-multiple-assets">https://ethereum.stackexchange.com/questions/23158/is-it-possible-to-create-ico-crowdsale-seamlessly-accepting-multiple-assets</a></li>
+</ul>
 
 <p>&nbsp;</p>
 <div class="cf"></div>
