Link recommended by Arthur

--- a/index.html
+++ b/index.html
@@ -118,6 +118,7 @@
   <li><a href="https://moneo.io/job/370-smart-contract-for-pre-ico-and-ico-development-audit-deployment-management">https://moneo.io/job/370-smart-contract-for-pre-ico-and-ico-development-audit-deployment-management</a></li>
   <li><a href="https://ethereum.stackexchange.com/questions/21548/where-to-find-ico-contract-with-linear-logarithmic-decrease">https://ethereum.stackexchange.com/questions/21548/where-to-find-ico-contract-with-linear-logarithmic-decrease</a></li>
   <li><a href="https://ethereum.stackexchange.com/questions/23158/is-it-possible-to-create-ico-crowdsale-seamlessly-accepting-multiple-assets">https://ethereum.stackexchange.com/questions/23158/is-it-possible-to-create-ico-crowdsale-seamlessly-accepting-multiple-assets</a></li>
+  <li><a href="https://github.com/ConsenSys/smart-contract-best-practices">https://github.com/ConsenSys/smart-contract-best-practices</a></li>
 </ul>
 
 <p>&nbsp;</p>
