--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
 <iframe width="560" height="315" src="https://www.youtube.com/embed/ugknikDkDv0" frameborder="0" allowfullscreen></iframe>
 
 <ul>
-<li><a href="https://docs.google.com/document/d/1UL1e21W6xNhXazVWn6gZHNO310MJa5c-ZXOTzLJPOU0/edit#heading=h.ol97kmdmne3u">Whitepaper</a></li>
-<li><a href="https://astralship.org">astralship.org</a></li>
-<li><a href="https://www.youtube.com/watch?v=-p0NG9OLlX0">Engedi 2.0 on Youtube</a></li>
+<li><a href="https://docs.google.com/document/d/1UL1e21W6xNhXazVWn6gZHNO310MJa5c-ZXOTzLJPOU0/edit#heading=h.ol97kmdmne3u">Whitepaper</a> <i>(request for comments)</i></li>
+<li><a href="https://astralship.org">astralship.org</a> <i>(our base)</i></li>
+<li><a href="https://www.youtube.com/watch?v=-p0NG9OLlX0">Engedi 2.0 on Youtube</a> <i>(our 2<sup>nd</sup> chapel)</i></li>
 <li>See more churches to buy:</li>
 </ul>
 
@@ -89,8 +89,10 @@
 
 <div class="cf"></div>
 
-<h2>Ideal Dream Team</h2>
+<h2>Ideal Would Be Dream Team</h2>
 <p>Working with a number of people in official and unofficial capacity, we cannot just plaster <a href="https://twitter.com/VitalikButerin/status/874523258565132292">Vitalik Buterin</a> face.</p>
+
+<p>We love flow state, peak performance, biohacking and it would be an honour to work with these guys:</p>
 <ul>
 <li>Tim Ferriss</li>
 <li>Dave Asprey</li>
@@ -98,6 +100,8 @@
 <li>Flow Genome Project</li>
 <li>London Real</li>
 </ul>
+
+<p>We are hiring for a number of roles: <a href="https://astralship.org/jobs">astralship.org/jobs</a>.</p>
 
 <div class="cf"></div>
 
