--- a/index.html
+++ b/index.html
@@ -17,10 +17,8 @@
 <div class="box header" id="text">
 
 <h1>genesis<span>.re</span></h1>
-
-<h3>We are raising 30BTC to get us ready for ICO</h3>
-
-<h3>Currently the website + video + whitepaper = work in progress</h3>
+  
+<p>At this stage - by definition - everything is work in progress - DRAFT - request for comments. We are looking forward to work with more knowlegeable and committed people.</p>
 
 <iframe width="560" height="315" src="https://www.youtube.com/embed/ugknikDkDv0" frameborder="0" allowfullscreen></iframe>
 
