--- a/index.html
+++ b/index.html
@@ -18,15 +18,15 @@
 
 <h1>genesis<span>.re</span></h1>
   
-<p>At this stage - by definition - everything is work in progress - DRAFT - request for comments. We are looking forward to work with more knowlegeable and committed people.</p>
+<p><strong>NOTE WELL:</strong> at this stage - by definition - everything is work in progress - DRAFT - request for comments.</p>
 
 <iframe width="560" height="315" src="https://www.youtube.com/embed/ugknikDkDv0" frameborder="0" allowfullscreen></iframe>
 
 <ul>
 <li><a href="https://docs.google.com/document/d/1UL1e21W6xNhXazVWn6gZHNO310MJa5c-ZXOTzLJPOU0/edit#heading=h.ol97kmdmne3u">Whitepaper</a> <i>(request for comments)</i></li>
 <li><a href="https://astralship.org">astralship.org</a> <i>(our base)</i></li>
-<li><a href="https://www.youtube.com/watch?v=-p0NG9OLlX0">Engedi 2.0 on Youtube</a> <i>(our 2<sup>nd</sup> chapel)</i></li>
-<li>See more churches to buy:</li>
+<li><a href="https://www.youtube.com/watch?v=d84fwxiWnSk">Engedi 2.0 on Youtube</a> <i>(our 2<sup>nd</sup> chapel)</i></li>
+<li>More churches to buy:</li>
 </ul>
 
 
