--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
+<!DOCTYPE html>
 <html>
   <head>
     <title>#SHA2017 genesis.re</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <style>
       body{
         margin: 0;
@@ -50,16 +52,16 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/86/three.min.js"></script>
 
     <meta property="og:title" content="#SHA2017 genesis.re"/>
-    <meta property="og:image" content="https://astralship.org/images/facebook-share-thumbnail.jpg"/>
+    <meta property="og:image" content="https://genesis.re/facebook-thumbnail.jpg"/>
     <meta property="og:site_name" content="BTC: 17zVA88xk4Ma7Cza4NXGYcP4Z1Qz7TUdzV"/>
-    <meta property="og:description" content="Michał Stefanów - shapeshifter transgressing hyperdimensional multiverse. Also alchemist, manifestor, technoshaman, certified psychonautics engineer. Most recently catalyst, conduit putting together astralship.org chapel."/>
+    <meta property="og:description" content="Visit our astralship.org chapel."/>
 
 
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:site" content="@genesisdotre">
     <meta name="twitter:creator" content="@stefek99">
     <meta name="twitter:title" content="#SHA2017 genesis.re">
-    <meta name="twitter:description" content="BTC: 17zVA88xk4Ma7Cza4NXGYcP4Z1Qz7TUdzV - Michał Stefanów - shapeshifter transgressing hyperdimensional multiverse. Also alchemist, manifestor, technoshaman, certified psychonautics engineer. Most recently catalyst, conduit putting together astralship.org chapel.">
+    <meta name="twitter:description" content="BTC: 17zVA88xk4Ma7Cza4NXGYcP4Z1Qz7TUdzV • Visit our astralship.org chapel.">
     <meta name="twitter:image" content="https://genesis.re/SHA2017-resized.jpg">
 
   </head>
