--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 
     <meta property="og:title" content="#SHA2017 genesis.re"/>
     <meta property="og:image" content="https://genesis.re/facebook-thumbnail.jpg"/>
-    <meta property="og:site_name" content="BTC: 17zVA88xk4Ma7Cza4NXGYcP4Z1Qz7TUdzV"/>
+    <meta property="og:site_name" content="22-23-24 September co-creating the world’s first Global Solutions Day!"/>
     <meta property="og:description" content="Visit our astralship.org chapel."/>
 
 
@@ -61,7 +61,7 @@
     <meta name="twitter:site" content="@genesisdotre">
     <meta name="twitter:creator" content="@stefek99">
     <meta name="twitter:title" content="#SHA2017 genesis.re">
-    <meta name="twitter:description" content="BTC: 17zVA88xk4Ma7Cza4NXGYcP4Z1Qz7TUdzV • Visit our astralship.org chapel.">
+    <meta name="twitter:description" content="22-23-24 September co-creating the world’s first Global Solutions Day! Visit our astralship.org chapel.">
     <meta name="twitter:image" content="https://genesis.re/SHA2017-resized.jpg">
 
   </head>
