--- a/index.html
+++ b/index.html
@@ -66,7 +66,14 @@
 
   </head>
   <body>
-    <noscript>Please enable JS - there is a clever 360 image here. Direct link: /SHA2017.jpg</noscript>
+    <noscript>
+      <h1>Please enable JavaScript.</h1>
+      <h3>There is a clever 360 image here.<h3>
+      <img src="https://genesis.re/SHA2017-resized.jpg">
+      <style>
+        #header {display:none;}
+      </style>
+    </noscript>
 
     <img src="https://genesis.re/SHA2017-resized.jpg" style="display:none"> <!-- micro hack for linters that scan for images -->
 
