--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
     <meta name="twitter:site" content="@genesisdotre">
     <meta name="twitter:creator" content="@stefek99">
     <meta name="twitter:title" content="#SHA2017 genesis.re">
-    <meta name="twitter:description" content="22-23-24 September co-creating the world’s first Global Solutions Day! Visit our astralship.org chapel in the UK... Please RT #SHA2017">
+    <meta name="twitter:description" content="22-23-24 September co-creating the world’s first Global Solutions Day! RT always appreciated 🦄">
     <meta name="twitter:image" content="https://genesis.re/SHA2017-resized.jpg">
 
   </head>
