--- a/index.html
+++ b/index.html
@@ -83,9 +83,10 @@
         <div style="height:10px"></div>
         #hackbase #coliving <br>
         <div style="height:10px"></div>
-        <a href="mailto:email@genesis.re">email@genesis.re</a><br>
-        <div style="height:10px"></div>
-        hackers of planets
+
+        <a href="https://twitter.com/stefek99" class="twitter-follow-button" data-show-count="false">Follow @stefek99</a><br>
+        <a href="https://twitter.com/theastralship" class="twitter-follow-button" data-show-count="false">Follow @theastralship</a><br>
+        <a href="https://twitter.com/genesisdotre" class="twitter-follow-button" data-show-count="false">Follow @genesisdotre</a><br>
     </header>
 
     <script>
@@ -187,5 +188,7 @@
       }
       
     </script>
+
+    <script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
   </body>
 </html>
