content lives on wiki now

--- a/index.html
+++ b/index.html
@@ -89,15 +89,9 @@
 
     <header id="header">
 
-        genesis.re • <a href="https://astralship.org">astralship.org</a><br>
-        <div style="height:10px"></div>
-        <!-- <a href="https://twitter.com/search?q=coliving">#coliving</a> <a href="https://twitter.com/search?q=hackbase">#hackbase</a><br> -->
-        <!-- <div style="height:10px"></div> -->
-        <span style="font-size: 1.3em">Global Solutions Day</span><br>        
-        <div style="height:10px"></div>
-        23 September 2017<br>
+        Content lives on the wiki:
         <div style="height:20px"></div>
-        <a style="padding: 10px; font-size: 1.3em" class="border" href="https://astralship.org/gsd">astralship.org/gsd</a><br>
+        <a style="padding: 10px; font-size: 1.3em" class="border" href="https://genesis.re/wiki">genesis.re/wiki</a><br>
 
         <div style="height:10px"></div>
         <!-- <a style="font-size: 0.6em" href="https://twitter.com/intent/retweet?tweet_id=894447320447823873">retweet the tweet</a>  -->
@@ -202,6 +196,9 @@
 
       
     </script>
+
+    <script src="https://genesis.re/cmdctrl/cmdctrl.js"></script>
+
 
 
   </body>
