--- a/jobs/index.html
+++ b/jobs/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
  <head>
-  <meta http-equiv="refresh" content="0; url=http://www.gumtree.pl/a-programisci-informatyka-i-internet/krakow/quantum-shift-agents-%2B-rainbow-warriors-%2B-all-the-spiritual-beings-peace-love-respect-harmony/1001488286710910833419009">
+  <meta http-equiv="refresh" content="0; url=https://astralship.org/jobs">
  </head>
  <body>
 
