--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
       .wrapper {
         max-width: 500px;
-        margin: 0 auto;
+        margin: 20px auto; /* TODO: align middle */
         padding: 20px;
         background: rgba(0,0,0,0.8);
       }
