--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
       }
 
       .clearfix:after {
-         content: " "; /* Older browser do not support empty content */
+         content: " ";
          visibility: hidden;
          display: block;
          height: 0;
@@ -54,20 +54,17 @@
 
     </style>
 
-    <script src="three.min.js"></script> <!-- not providing CDN as some people have disabled 3rd party JS - kind of "tricky" - depending on what message you want to say with your code -->
-
     <meta property="og:title" content="genesis.re • operating system for the planets"/>
-    <meta property="og:image" content="https://genesis.re/facebook-thumbnail.jpg"/>
-    <meta property="og:site_name" content="23 September co-creating the world’s first Global Solutions Day!"/>
+    <meta property="og:image" content="https://genesis.re/flower.jpg""/>
+    <meta property="og:site_name" content="Architecting the new world"/>
     <meta property="og:description" content="Visit our astralship.org chapel."/>
-
 
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:site" content="@genesisdotre">
     <meta name="twitter:creator" content="@stefek99">
     <meta name="twitter:title" content="genesis.re • operating system for the planets">
-    <meta name="twitter:description" content="23 September co-creating the world’s first Global Solutions Day! RT always appreciated 🦄">
-    <meta name="twitter:image" content="https://genesis.re/SHA2017-resized.jpg">
+    <meta name="twitter:description" content="Architecting the new world. Visit our astralship.org chapel.">
+    <meta name="twitter:image" content="https://genesis.re/flower.jpg">
 
   </head>
   <body>
@@ -90,11 +87,14 @@
       • <a href="https://en.wikipedia.org/wiki/Effective_altruism">Effective Altruism</a><br>
       • <a href="https://en.wikipedia.org/wiki/Triple_bottom_line">Triple Bottom Line</a></p>
 
-      More on the wiki: <a style="font-size: 1.4em; font-weight: bold" href="https://genesis.re/wiki">genesis.re/wiki</a></p>
+      More on the wiki: <a style="font-size: 1.4em; font-weight: bold" href="https://genesis.re/wiki">genesis.re/wiki</a><br><br>
+
+      We are doing this already: <a style="font-size: 1.4em; font-weight: bold" href="https://astralship.org">astralship.org</a></p>
 
       <div>
         <img src="www/images/blueface.jpg" height="80" style="float:left; margin-right: 15px">
 
+        <a href="https://michalstefanow.com">michalstefanow.com</a><br>
         <a href="mailto:email@genesis.re">email@genesis.re</a><br>
         <a href="tel:+447586294279">+44<span class="space"></span>758<span class="space"></span>629<span class="space"></span>4279</a><br>
         <a href="https://twitter.com/stefek99">@stefek99</a>
