--- a/index.html
+++ b/index.html
@@ -18,10 +18,11 @@
         margin: 0;
         color: white;
         font-family: monospace;
+        font-size: 1.1em;
       }
 
       .wrapper {
-        max-width: 500px;
+        max-width: 600px;
         margin: 20px auto; /* TODO: align middle */
         padding: 20px;
         background: rgba(0,0,0,0.8);
@@ -52,6 +53,13 @@
          clear: both;
       }
 
+      h3 {
+        margin-bottom: 0;
+      }
+      h3 + p {
+        margin-top: 0;
+      }
+
     </style>
 
     <meta property="og:title" content="genesis.re • operating system for the planets"/>
@@ -69,35 +77,72 @@
   </head>
   <body>
 
+    <!-- TODO: on mobile resize gently the font size so it fits into a single line -->
     <div class="wrapper">
       <h1>architecting the new world<br>
           operating system for the planets</h1>
 
 
-      <p>Democracy originates from ancient Greece.<br>
-      Current model of democracy is so 1800.<br>
-      Technology of horse and cart, mail pigeon,<br>
+      <p>Democracy originated in ancient Greece.
+      Current model of voting is so 1800.
+      Technology of horse and cart, mail pigeon,
       ship sailing US to UK in 20+ days.</p>
 
-      <p>Now we have internet, Facebook, iPhone, Bitcoin<br>
-      <i>(consensus protocol is much more than money)</i><br>
-      and Elon Musk making journey to Mars reality.<br>
+      <p>Now we have internet, Facebook, iPhone, Bitcoin
+      <i>(not just money but consensus protol)</i>
+      and Elon Musk flying to Mars</p>
 
-      <p>Regenerative ecosystems and systematic change:<br>
+
+      <h3>Meta Project:</h3>
+      • Regenerative ecosystems<br>
+      • Systematic change<br>
       • <a href="https://en.wikipedia.org/wiki/Effective_altruism">Effective Altruism</a><br>
       • <a href="https://en.wikipedia.org/wiki/Triple_bottom_line">Triple Bottom Line</a></p>
 
-      More on the wiki: <a style="font-size: 1.4em; font-weight: bold" href="https://genesis.re/wiki">genesis.re/wiki</a><br><br>
+      <i>(in the old system it was the profit for shareholders, now it is OK to serve the planet and the people)</i>
 
-      We are doing this already: <a style="font-size: 1.4em; font-weight: bold" href="https://astralship.org">astralship.org</a></p>
+      <h3>Action 1: rainforest restoration</h3>
+      <p>In many places jungle was raised to the ground. Buyind land for less than $1000 per acre, planting bamboo that captures CO<sub>2</sub> and is used to generate clean, renevable energy from biomass</p>
+      <h3>Follow up</h3>
+      <p>Network of resilient communities focused on education:<br>
+       • nature (medicinal plants)<br>
+       • technology (developer training)<br>
+       • human communication protocols</p>
+
+      <h3>Action 2: repurposing military production</h3>
+      <p>We can keep the complex going by building machines for agriculture and construction. No&nbsp;need to invade soveraign nations like Iraq or Afghanistan - people get angry when you bomb them.</p>
+
+
+      <!--
+      <h3>Project 3: life insurance policy</h3>
+      <p>$1m+ insurance fund to either pay the ransom or hire ex-military ex-Navy SEALs contractors for a rescue operation. Note: these guys have fancy toys and are working like machines. If you still believe you have game theory incentives - do not mess with us - let's work together towards advancement of humanity.</p>
+
+      <p><i>(we still believe discretion is the best way to stay safe, once you start appearing at conferences is not that easy to fork reality)</i></p>
+
+      <h3>Project 4: Bitcoin mining in the space</h3>
+      <p>Blockstream offers satellites broadcasting blockchain... Solar power in the space works 24/7/365, no such thing as day and night. Shut down the naysayers complaining about environmental costs.</p>
+
+      -->
+
+
+      <!-- DOGE: DUNRYwRyyiqjW6mNVwZCd3bDTT88k4S1Jw -->
+
+      <!-- ZCASH: t1TxkhAy5ofChY4zaCJsb9Dt9RTTCvmMURc -->
+
+
+      <p style="font-size: 1.4em; font-weight: bold">Read more: <a href="https://genesis.re/wiki">genesis.re/wiki#Core_Values</a></p>
+
+      <p style="font-size: 1.4em; font-weight: bold">Our HQ in a church: <a href="https://astralship.org">astralship.org</a></p>
+
 
       <div>
         <img src="www/images/blueface.jpg" height="80" style="float:left; margin-right: 15px">
 
-        <a href="https://michalstefanow.com">michalstefanow.com</a><br>
         <a href="mailto:email@genesis.re">email@genesis.re</a><br>
         <a href="tel:+447586294279">+44<span class="space"></span>758<span class="space"></span>629<span class="space"></span>4279</a><br>
-        <a href="https://twitter.com/stefek99">@stefek99</a>
+        <a href="https://twitter.com/stefek99">@stefek99</a><br>
+        Shapeshifter Transgressing<br>
+        Hyperdimensional Multiverse
         <div class="clearfix"></div>
 
       </div>
@@ -105,6 +150,8 @@
     </div>
 
     <script src="https://genesis.re/cmdctrl/cmdctrl.js"></script>
+
+    <!-- <script>document.write('<script src="http://' + (location.host || 'localhost').split(':')[0] + ':35729/livereload.js?snipver=1"></' + 'script>')</script> -->
 
   </body>
 </html>
