--- a/index.html
+++ b/index.html
@@ -89,8 +89,8 @@
       ship sailing US to UK in 20+ days.</p>
 
       <p>Now we have internet, Facebook, iPhone, Bitcoin
-      <i>(not just money but consensus protol)</i>
-      and Elon Musk flying to Mars</p>
+      <i>(not just money but consensus protocol)</i>
+      and Elon Musk flying to Mars.</p>
 
 
       <h3>Meta Project:</h3>
